--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,3 +64,12 @@ input:checked + label:after {
 label:active:after {
 	width: 20px;
 }
+
+.react-contexify__item:not(.react-contexify__item--disabled):hover > .react-contexify__item__content, .react-contexify__item:not(.react-contexify__item--disabled):focus > .react-contexify__item__content {
+  color: white !important;
+  background-color: #45556D !important;
+}
+
+.react-contexify {
+	background-color: #45556D !important;
+}
