--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-/* #f6f6f6  -- light gray looks cutie */
-/*  TODO light blue, light grey,  */
-html {
-  overflow-y: scroll;
-}
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer base {
 
-* {
-  box-sizing: border-box;
+  html,
+  body {
+    
+    padding: 0;
+    margin: 0;
+    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+      Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  }
+  
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  h1 {
+    font-family: 'Signika', sans-serif;
+  }
+  button {
+    
+    font-family: 'Dosis', sans-serif;
+    font-size: 1rem !important;
+    font-weight: 500 !important;
+  }
+  span {
+    font-family: 'Dosis', sans-serif;
+  }
+  h3 {
+    font-family: 'Poppins', sans-serif;
+    
+  }
 }
 
 input[type='checkbox'] {
@@ -54,13 +67,22 @@ label:after {
   transition: 0.3s;
 }
 
-/* input:checked + label {
-	background: #bada55;
-} */
-
 input:checked + label:after {
   left: calc(100% - 3px);
   transform: translateX(-100%);
+}
+
+label#labelTab:after {
+  left: 22px
+}
+
+input#switch2:checked + label#labelTab:after {
+  left: calc(100% - 22px);
+  transform: translateX(-100%)
+}
+
+label#labelTab:active:after {
+  width: 16px;
 }
 
 label:active:after {
