--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,28 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
-
   html,
   body {
-    
     padding: 0;
     margin: 0;
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
       Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   }
-  
+
   a {
     color: inherit;
     text-decoration: none;
   }
-  
+
   h1 {
-    font-family: 'Signika', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-size: 3.4rem !important;
+    line-height: 1.5rem !important;
+    font-weight: 100 !important;
+    font-style: normal !important;
+    letter-spacing: -0.072em !important;
   }
   button {
-    
     font-family: 'Dosis', sans-serif;
     font-size: 1rem !important;
     font-weight: 500 !important;
@@ -33,7 +34,6 @@
   }
   h3 {
     font-family: 'Poppins', sans-serif;
-    
   }
 }
 
@@ -73,12 +73,12 @@ input:checked + label:after {
 }
 
 label#labelTab:after {
-  left: 22px
+  left: 22px;
 }
 
 input#switch2:checked + label#labelTab:after {
   left: calc(100% - 22px);
-  transform: translateX(-100%)
+  transform: translateX(-100%);
 }
 
 label#labelTab:active:after {
