modal and tab open configured properly and animated

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,3 +100,16 @@ label:active:after {
 .react-contexify {
   background-color: #45556d !important;
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+  opacity: 0;
+}
